--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
 	<url>http://maven.apache.org</url>
 	<dependencies>
 
+
+<dependency>
+    <groupId>org.codemonkey.simplejavamail</groupId>
+    <artifactId>simple-java-mail</artifactId>
+    <version>2.1</version>
+</dependency>
+
+
 <!-- For JSON Parsing -->
 <dependency>
     <groupId>io.fastjson</groupId>
